# cpc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml  flawfinder-analysis.yml  msvc-analysis.yml
lib/: io.hpp
lib/io/: CMakeLists.txt  io.cpp  io.hpp
src/: CMakeLists.txt  main.cpp
src/consumer/: CMakeLists.txt  runnable.cpp  runnable.hpp
src/cpc/: message_dispatcher.hpp  message_queue.hpp
src/producer/: CMakeLists.txt  runnable.cpp  runnable.hpp
src/utils/: CMakeLists.txt  message_queue.hpp  thread_runner.cpp  thread_runner.hpp
test/: CMakeLists.txt
test/utils/: CMakeLists.txt  message_queue.test.cpp  thread_runner.test.cpp  utils.test.cpp
